Fix first note of midi highlighting Slightly adjust the positioning of the hi-hat elements to precisely align vertically

--- a/css/groove_writer_orange.css
+++ b/css/groove_writer_orange.css
@@ -417,36 +417,36 @@
 		cursor: pointer;
 	}
 	.hh_crash {
-		position: absolute; top: 21px; left: 2px;
+		position: absolute; top: 21px; left: 4px;
 		font-size: 22px;
 		color: transparent;
 		cursor: pointer;
 	}
 	.hh_ride {
-		position: absolute; top: 17px; left: 5px;
+		position: absolute; top: 17px; left: 7px;
 		font-size: 26px;
 		color: transparent;
 		cursor: pointer;
 	}
 	.hh_cross {
-		position: absolute; top: 20px; left: 3px;
+		position: absolute; top: 20px; left: 5px;
 		font-size: 24px;
 		color: #CCCCCC;
 		cursor: pointer;
 	}
 	.hh_open {
-		position: absolute; top: 7px; left: 7px;
+		position: absolute; top: 7px; left: 9px;
 		font-size: 13px;
 		color: transparent;
 	}
 	.hh_close {
-		position: absolute; top: 7px; left: 7px;
+		position: absolute; top: 7px; left: 9px;
 		font-size: 13px;
 		color: transparent;
 		float:left;
 	}
 	.hh_accent {
-		position: absolute; top: 2px; left: 9px;
+		position: absolute; top: 2px; left: 11px;
 		font-size: 20px;
 		color: transparent;
 		float:left;
@@ -479,13 +479,13 @@
 		cursor: pointer;
 	}
 	.snare_flam {
-		position: absolute; top: 29px; left: -3px;
+		position: absolute; top: 29px; left: -2px;
 		font-size: 25px;
 		color: transparent;
 		cursor: pointer;
 	}
 	.snare_accent {
-		position: absolute; top: 0px; left: 10px;
+		position: absolute; top: 0px; left: 11px;
 		font-size: 26px;
 		color: transparent;
 	}
